BUG: fix horiz scrollbar
... might be related: https://github.com/twbs/bootstrap/issues/10711#issuecomment-26642849

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #000;
+    overflow-x: hidden;
 }
 
 html {
